syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ovh.cds.sdk.grpcplugin.storageplugin";
option java_outer_classname = "StoragePluginProto";
option go_package = "storageplugin";

package storageplugin;

import "google/protobuf/empty.proto";

// To generate the go files run: 
// protoc --go_out=plugins=grpc:. *.proto

message StoragePluginManifest {
    string name = 1;
    string version = 2;
    string description = 3;
    string author = 4;
}

message Options {
    map<string, string> options = 1;
}

message Result {
    string status = 1;
    string details = 2;
}

service StoragePlugin {
    rpc Manifest (google.protobuf.Empty) returns (StoragePluginManifest) {}
    rpc Stop (google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc ArtifactDownload (Options) returns (Result) {}
    rpc ArtifactUpload (Options) returns (Result) {}
    rpc ServeStaticFiles (Options) returns (Result) {}
    rpc CachePull (Options) returns (Result) {}
    rpc CachePush (Options) returns (Result) {}
} 